# n5

./: .env.local  Dockerfile  README.md  READMEmd  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 3d8728f2e466_initial_tables.py  739277c61d3d_new_tables.py  8c1745843726_fix_column.py  b0f467cc2da8_fix_columns.py
src/: main.py
src/core/: exceptions.py  logger.py  utils.py
src/core/types/: models.py
src/database/: session.py
src/models/base/: fields.py  security.py
src/models/people/: base.py  model.py  operations.py
src/models/police_officers/: base.py  model.py  operations.py
src/models/traffic_violations/: base.py  model.py  operations.py
src/models/vehicles/: base.py  model.py  operations.py
src/routes/: base_router.py
src/routes/v1/: login.py  people.py  police_officers.py  traffic_violations.py  vehicles.py
src/security/: jwt.py
src/services/: people.py  police_officers.py  traffic_violations.py  vehicles.py
src/services/orm/: models.py  sqlalchemy.py
src/settings/: base_settings.py  database.py  jwt.py  project.py
tests/: conftest.py  utils.py
tests/fixtures/: app.py  db.py  session.py
tests/fixtures/fakers/: decorators.py  people.py  police_officers.py  traffic_violations.py  utils.py  vehicles.py
tests/integration/: test_people.py  test_police_officers.py  test_traffic_violations.py  test_vehicles.py
tests/templates/: model_service.py
tests/units/services/: test_people.py  test_police_officers.py  test_traffic_violations.py  test_vehicles.py
